@@ -70,7 +70,7 @@ public class PayInstallmentService {
 
         _installmentRepository.saveAll(installments);
 
-        var currency = installments.get(0).getCurrency();
+        var currency = installments.getFirst().getCurrency();
         var bankAccountId = _accountService.loadBankAccount(currency).getId();
 
         var transferDto = new TransferDto(sumInstallmentsAmount,
